correciones de envio y consulta de mensajes po id
